<resources>
    <string name="app_name">Weather ++</string>
    <string name="permission_location_rationale">Location permission is needed to detect your location.</string>
    <string name="action_settings">Settings</string>
    <string name="instance">--</string>
    <string name="day">Day:</string>
    <string name="night">Night:</string>
    <string name="humidity">Humidity:</string>
    <string name="temperature">Temperature:</string>
    <string name="wind">Wind:</string>
    <string name="pressure">Pressure:</string>
</resources>